--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,24 @@
 <header>
     page header
+
+ <ul>
+   
+   <% if(locals.user){ %>
+    <li><a href="/user/profile/"> <%= locals.user.name %></a></li>
+   <li>
+    <a href="/user/sign-out"> sign-out</a>
+   </li>
+
+   <%} else{ %>
+      <li><a href="/user/sign-in"> sign in</a></li>
+
+      <li><a href="/user/sign-up"> sign up</a></li>
+
+      <% } %>
+ </ul>
+
+
+
+
+
 </header>
