--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1> user profile supremacy !!!!!!!!</h1>
-        <p><%= user.name  %></p>
-        <p><%= user.email      %></p>
+        <p><%= locals.user.name  %></p>
+        <p><%= locals.user.email      %></p>
     </body>
 </html>
 
