--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,9 @@
     <head>
         <title>layout</title>
         <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
+
         <%- style %>
     </head>
 
