--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,25 @@
-<html>
-    <head>
-<title>
-    Home
-</title>
-    </head>
+<h1> HOME PAGE </h1>
 
-    <body>
-      
-        <p>this is the variable part</p>
-     
-     
-        
-    </body>
-</html>
+<section id="feed-posts">
+<h3>post</h3>
+<% if(locals.user){%>
+<form action="/post/create" id="new-post-form" method="POST">
+<textarea name="content" cols="30" rows="3"></textarea> 
+<input type="submit" value="Post">
+</form>
+
+<% } %>
+<div id="posts-list-container">
+    <ul>
+        <% for(post of posts){ %>
+           <%- include('post') -%>
+            <% } %>
+
+          
+    </ul>
+</div>
+
+
+
+
+</section>
