--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,4 +1,8 @@
 body{
-    text-align: center;
-    margin:0px;
+    margin: 0;
+  
+   color:white;
+    #layout-main{
+        height: 100%;
+    }
 }
